@@ -1,3 +1,8 @@
+2004-10-10	Iztok Zupet	 <iz@elsis.si>
+
+	* cdl/redboot.cdl: added CYGSEM_REDBOOT_DISK_IDE_VMWARE option.
+	* src/fs/ide.c : skip reset IDE commands if running under VMware.
+
 2004-10-08  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* doc/redboot_installing.sgml: Added links to the tools for the
